<resources>
    <string name="app_name">RocketFuel</string>
    <string name="title_activity_home">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!--Login activity-->
    <string name="photoContentDescription">User photo</string>
    <string name="register">Register here</string>

    <!--Register activity-->
    <string name="userNameTxt">Name</string>
    <string name="userSurnameTxt">Surname</string>
    <string name="passwordTxt">Password</string>
    <string name="confirmPasswordTxt">Confirm password</string>
    <string name="registerBtn">Register</string>
    <string name="emailTxt">E-mail</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>


    <!--Upload Exercise Activity-->
    <string name="title">Title…</string>
    <string name="description">Description…</string>
    <string name="coach">Coach prompts…</string>
    <string name="upload">Upload</string>
    <string name="databaseError">DatabaseError</string>
    <string name="addExercise">Add exercise</string>
    <string name="category">Set category:</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="training">Start training</string>
    <string name="pick_data">Pick data</string>
    <string name="submit_event">Submit event</string>
    <string name="your_date">Your date</string>
    <string name="complete_fields">Complete all fields</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="no_image">You haven\'t picked Image</string>
    <string name="complete_all_fields_prompt">Complete all fields</string>
    <string name="google_connection_failed">Google connection failed</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="email_verify_prompt">Please verify your email</string>
    <string name="connection_error">Connection error</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="verification_email">Verification email sent</string>
    <string name="acc_creation_failed">Account creating failed</string>
    <string name="register_succeeded">Register succeeded</string>
    <string name="qr_scanner">QR code</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="perGranted">Permission Granted</string>
    <string name="perNotGranted">Permission Denied</string>
    <string name="allowPer">You need to allow access to both the permissions</string>
    <string name="scanResult">Scan Result</string>
    <string name="visit">Visit</string>

</resources>
