<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/addExercise" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/training" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_menu_calender"
            android:title="@string/calender" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
