<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_animation"
    android:id="@+id/registerLayout"
    tools:context="com.example.konrad.rocketfuel.RegisterActivity">

    <EditText
        android:id="@+id/registerUserNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_login_user"
        android:hint="@string/userNameTxt"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/registerUserSurnameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerUserNameTxt"
        android:layout_margin="15dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_login_user"
        android:hint="@string/userSurnameTxt"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/registerPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/registerEmailTxt"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/passwordTxt"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/registerConfirmPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerPasswordTxt"
        android:layout_margin="15dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirmPasswordTxt"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/registerEmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerUserSurnameTxt"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/emailTxt"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_register"
        android:padding="10dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/btn_login"
        android:text="@string/registerBtn" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerConfirmPasswordTxt"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>
