<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.konrad.rocketfuel.UploadExerciseToCategory">

    <LinearLayout
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageUploadViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/add_btn"
            android:cropToPadding="false"
            android:saveEnabled="false"
            android:scaleType="fitCenter" />

       <TextView
           android:id="@+id/categoryName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:padding="10dp"
           android:text="@string/databaseError"
           android:textSize="16sp"
           android:background="@drawable/text_shape"/>

        <EditText
            android:id="@+id/uploadTitleCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/text_shape"/>

        <EditText
            android:id="@+id/uploadDescriptionCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:background="@drawable/text_shape"/>

        <EditText
            android:id="@+id/coachPromptUploadCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/coach"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:background="@drawable/text_shape"/>


        <Button
            android:id="@+id/uploadImageBtnCategory"
            android:text="@string/upload"
            android:layout_weight="1"
            android:layout_width="match_parent"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="@drawable/btn_upload"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>


    </LinearLayout>

</ScrollView>
