<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.konrad.rocketfuel.UploadExercise">

    <LinearLayout
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageUploadView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/add_btn"
            android:cropToPadding="false"
            android:saveEnabled="false"
            android:scaleType="fitCenter" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/uploadTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/uploadDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <EditText
            android:id="@+id/coachPromptUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/coach"
            android:inputType="textMultiLine"
            android:padding="10dp" />
        

            <Button
                android:id="@+id/uploadImageBtn"
                android:text="@string/upload"
                android:layout_weight="1"
                android:layout_width="match_parent"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:background="@drawable/btn_upload"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>


    </LinearLayout>

</ScrollView>
